Changed format for legibility

--- a/doc/checkpoint/Checkpoint_Report.ipynb
+++ b/doc/checkpoint/Checkpoint_Report.ipynb
@@ -90,7 +90,9 @@
     "<hr style=\"height:5px; border-width:0; color:gray; background-color:gray\">\n",
     "\n",
     "## Section 3:\n",
-    "<span style = \"font-size: 60%;\"> A brief description of how you are structuring the Python package src."
+    "<span style = \"font-size: 60%;\"> A brief description of how you are structuring the Python package src.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -118,7 +120,9 @@
     "<hr style=\"height:5px; border-width:0; color:gray; background-color:gray\">\n",
     "\n",
     "## Section 4:\n",
-    "<span style = \"font-size: 60%;\"> A description of what tests are in test."
+    "<span style = \"font-size: 60%;\"> A description of what tests are in test.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -161,7 +165,9 @@
     "<hr style=\"height:5px; border-width:0; color:gray; background-color:gray\">\n",
     "\n",
     "## Section 5:\n",
-    "<span style = \"font-size: 60%;\"> Report on your preliminary investigations into the effectiveness of your method."
+    "<span style = \"font-size: 60%;\"> Report on your preliminary investigations into the effectiveness of your method.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -197,7 +203,9 @@
     "<hr style=\"height:5px; border-width:0; color:gray; background-color:gray\">\n",
     "\n",
     "## Section 6:\n",
-    "<span style = \"font-size: 60%;\"> Your proposed variations/improvements for the final project."
+    "<span style = \"font-size: 60%;\"> Your proposed variations/improvements for the final project.\n",
+    "\n",
+    "---"
    ]
   },
   {
