Mag vs tem; Eng vs Temp; specifc heat vs temp

--- a/src/Metroplis Algorithm.ipynb
+++ b/src/Metroplis Algorithm.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "code",
    "source": [
     "N = 20\n",
-    "beta_range = np.linspace(0.2, 0.7, 40)  # 你可以根据需要调整范围和步长\n",
+    "beta_range = np.linspace(0.2, 0.7, 40)  \n",
     "n_samples = 500\n",
     "tol = 0.01\n",
     "\n",
