--- a/doc/checkpoint/Checkpoint_Report.ipynb
+++ b/doc/checkpoint/Checkpoint_Report.ipynb
@@ -239,23 +239,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02bf6d7b-7451-4a63-ac2d-9d2c0bccfba9",
-   "metadata": {},
-   "source": [
-    "On a side note, AI has been used to help debug our code so there may be mistakes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "518e9ef2-6903-47b8-bded-6959f7961b5d",
    "metadata": {},
    "source": [
     "<hr style=\"height:5px; border-width:0; color:gray; background-color:gray\">\n",
     "\n",
     "## Section 6:\n",
-    "<span style = \"font-size: 60%;\"> Your proposed variations/improvements for the final project.\n",
-    "\n",
-    "---"
+    "<span style = \"font-size: 60%;\"> Your proposed variations/improvements for the final project.\n"
    ]
   },
   {
